# gdk

docs/source/: gdk-json.rst
include/: gdk.h
src/: auth_handler.cpp  ffi_c.cpp  ga_auth_handlers.cpp  ga_auth_handlers.hpp  ga_cache.cpp  ga_lightning.cpp  ga_lightning.hpp  ga_rust.cpp  ga_rust.hpp  ga_session.cpp  ga_session.hpp  ga_tx.cpp  network_parameters.cpp  session_impl.cpp  session_impl.hpp  transaction_utils.cpp  transaction_utils.hpp
src/swig_java/: swig_gasdk.i
subprojects/gdk_rust/gdk_common/src/: model.rs  session.rs
subprojects/gdk_rust/gdk_electrum/: Cargo.toml
subprojects/gdk_rust/gdk_electrum/src/: account.rs  lib.rs
subprojects/gdk_rust/gdk_rust/src/: lib.rs
subprojects/gdk_rust/src/: lib.rs  serialize.rs
tools/: build.sh  buildboost.sh
