[package]
name = "gdk-electrum"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[features]
testing = [ "gdk-common/testing" ]

[dependencies]
log = "0.4.8"
rand = "0.6.5"
base64 = "*"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
tempfile = "3.2.0"
thiserror = "1.0"
# FIXME: unpin zeroize once we bump MSRV (needs rebuild of docker images)
zeroize = "<1.4.0"

[dev-dependencies]
env_logger = "0.10.0"
